more refinements to benchmark loops (auto-tune) for large arrays + fixed DPQ_11 (preallocation) to be fair + minor tweaks